# lumigator

./: .bazelignore  .bazelrc  .default.conf  .dockerignore  .env  .env.example  .env.template  .gitignore  .pants.bootstrap  .pre-commit-config.yaml  BUILD.bazel  BUILD.pants  CONTRIBUTING.md  Dockerfile  EVALUATION_GUIDE.md  LICENSE  MODULE.bazel  Makefile  PANTS_GUIDE.md  README.md  WORKSPACE.bazel  compose.env  config.default.yaml  docker-compose-local.yaml  docker-compose.ci.override.yaml  docker-compose.external.yaml  docker-compose.gpu.override.yaml  docker-compose.model-cache.override.yaml  docker-compose.yaml  install_lumigator.sh  lychee.toml  pants-ci.toml  pants.sh  pants.toml  pants_ci.toml  pyproject.toml  requirements.txt  ruff.toml  start-lumigator.sh
backend/: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_requirements.txt
backend/api/: __init__.py
backend/api/routes/: health.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: health.py  users.py
backend/app/core/: db.py  settings.py
backend/app/crud/: user.py
backend/app/models/: user.py
backend/app/schemas/: extras.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_health.py
backend/app/utils/: ray.py
backend/core/: server.py
backend/infra/mzai/backend/docker/: BUILD.pants  docker-compose.sh  docker-compose.yaml
backend/python/mzai/: README.md
backend/python/mzai/backend/: BUILD  Dockerfile  main.py
backend/python/mzai/backend/api/: BUILD
backend/python/mzai/backend/schemas/: BUILD  (+1 more)
backend/python/mzai/schemas/: BUILD  finetuning.py
backend/scripts/: lint.sh  test.sh
backend/src/: db.py  dump_openapi_schema.py  handlers.py  main.py  server.py  settings.py  utils.py
backend/src/api/: __init__.py  deps.py  router.py  tags.py
backend/src/api/routes/: finetuning.py  health.py  status.py
backend/src/app/schemas/: extras.py
backend/src/jobs/: entrypoints.py  handlers.py
backend/src/models/: base.py  common.py  finetuning.py
backend/src/records/: common.py  finetuning.py
backend/src/repositories/: finetuning.py
backend/src/schemas/: extras.py  finetuning.py
backend/src/services/: finetuning.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_finetuning.py  test_health.py
backend/tests/fakes/: finetuning_service.py
backend/tests/repositories/: test_finetuning.py
backend/tests/services/: test_finetuning.py
containers/golden_images/: BUILD.bazel  bundle.py
lumigator/backend/: .dockerignore  README.md  alembic.ini  pyproject.toml
lumigator/backend/backend/: config_templates.py  db.py  main.py  models.yaml  openapi_spec.py  settings.py
lumigator/backend/backend/alembic/: env.py
lumigator/backend/backend/api/: deps.py  http_headers.py  router.py  tags.py
lumigator/backend/backend/ray_submit/: submission.py
lumigator/backend/backend/records/: experiments.py  jobs.py  keys.py  mixins.py  secrets.py
lumigator/backend/backend/repositories/: base.py  experiments.py  jobs.py  keys.py  secrets.py
lumigator/backend/backend/services/: completions.py  datasets.py  experiments.py  job_interface.py  jobs.py  jobsworkflows.py  keys.py  secrets.py  workflows.py
lumigator/backend/backend/tests/: README.md  conftest.py
lumigator/backend/backend/tracking/: __init__.py  mlflow.py  schemas.py  tracking_factory.py  tracking_interface.py
lumigator/python/mzai/backend/: .dockerignore  BUILD.pants  Dockerfile  Dockerfile.uv  README.md  alembic.ini  config_templates.py  db.py  main.py  pyproject.toml  settings.py
lumigator/python/mzai/schemas/: .dockerignore  BUILD.pants  Dockerfile  README.md  __init__.py  check_version.sh  completions.py  experiments.py  groundtruth.py  jobs.py  main.py  openapi.py  pyproject.toml  tasks.py
lumigator/python/mzai/sdk/: BUILD.pants  README.md  __init__.py  client.py  completions.py  core.py  datasets.py  deployments.py  experiements.py  experiments.py  health.py  healthcheck.py  jobs.py  lm_datasets.py  lumigator.py  pyproject.toml
lumigator/schemas/: README.md  pyproject.toml
lumigator/schemas/lumigator_schemas/: completions.py  datasets.py  experiments.py  extras.py  jobs.py  keys.py  llm_router.py  models.py  redactable_base_model.py  redactor.py  secrets.py  tasks.py  workflows.py
lumigator/schemas/lumigator_schemas/tests/: conftest.py
lumigator/schemas/lumigator_schemas/transforms/: job_submission_response_transform.py
lumigator/schemas/lumigator_schemas/utils/: model_operations.py
lumigator/sdk/: README.md  pyproject.toml
lumigator/sdk/lumigator_sdk/: client.py  completions.py  experiments.py  jobs.py  lm_datasets.py  lumigator.py  models.py  settings.py  settings_secrets.py  strict_schemas.py  workflows.py
lumigator/sdk/tests/: conftest.py  helpers.py
lumigator/sdk/tests/data/: dataset.json  datasets.json  experiment-download-no-experiment.json  experiment-download.json  experiment-missing.json  experiment-post-all-translation.json  experiment-post-all.json  experiment-post-response.json  experiment-post-simple.json  experiment-result-no-experiment.json  experiment-result.json  experiment.json  experiments.json  job-all-annotation.json  job-all-eval.json  job-all-inference-translation.json  job-all-inference.json  job-all.json  job-extra-annotation.json  job-extra-eval-lite.json  job-extra-eval.json  job-extra-inference.json  job-extra.json  job-minimal-annotation.json  job-minimal-eval.json  job-minimal-inference.json  job-minimal.json  job-resp.json  job-submit-resp.json  job.json  jobs-submit.json  jobs.json  models.json
lumigator/sdk/tests/integration/: test_scenarios.py  test_scenarios_settings_secrets.py
lumigator/sdk/tests/unit/: test_completions.py  test_datasets.py  test_experiments.py  test_health.py  test_jobs.py  test_models.py  test_settings_secrets.py  test_workflows.py
plat/python/mzai/backend/: BUILD.bazel  BUILD.pants  main.py
plat/python/mzai/schemas/: BUILD.bazel
src/python/mzai/backend/: .dockerignore  BUILD  Dockerfile  pyproject.toml
(+1310 files in other folders)
