load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_runtime", "py_runtime_pair")
load("@bazel_gazelle//:def.bzl", "gazelle")

# Our gazelle target points to the python gazelle binary.
# This is the simple case where we only need one language supported.
# If you also had proto, go, or other gazelle-supported languages,
# you would also need a gazelle_binary rule.
# See https://github.com/bazelbuild/bazel-gazelle/blob/master/extend.rst#example
gazelle(
    name = "gazelle",
    gazelle = "@rules_python_gazelle_plugin//python:gazelle_binary",
)

py_runtime(
    name = "py3_runtime",
    interpreter_path = "$HOME/workspace/.pythoninterpreters/python3.10.13/python/install/bin/python3",
)

py_runtime_pair(
    name = "pyruntime_pair",
    py3_runtime = ":runtime",
)

toolchain(
    name = "python_3_10_standalone",
    toolchain = ":pair",
    toolchain_type = ":python_toolchain_type",
)

toolchain_type(
    name = "python_toolchain_type",
)
