[project]
name = "common"
version = "0.1.0"
description = "Common deps to develop"
requires-python = ">=3.11"
dependencies = [
    "pre-commit>=4.0.1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "myst-parser>=4.0.0",
    "autodoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "pydantic>=2.8.0",
    "loguru==0.7.2",
]

[dependency-groups]
# Added these as dev dependencies to make IDE pylint extension happy
dev = [
    "alembic>=1.14.1",
    "debugpy>=1.8.12",
    "fastapi>=0.115.6",
    "loguru>=0.7.2",
    "mlflow>=2.20.0",
    "mypy-boto3-s3>=1.36.0",
    "ray>=2.41.0",
    "s3fs>=2024.12.0",
]
