[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "platform-backend"
version = "0.1.0"
description = "Backend services for the MZAI Platform."
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "^3.10"

# Core
uvicorn = { extras = ["standard"], version = "0.28.0" }
fastapi = "0.110.0"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
httpx = "0.27.0"
loguru = "0.7.2"

# DB
sqlalchemy = { extras = ["asyncio"], version = "2.0.28" }
psycopg2-binary = "^2.9.9"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"

[tool.poetry.dev-dependencies]
ruff = "0.3.3"
pytest = "8.1.1"
pytest-cov = "4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov src/ --no-cov-on-fail --disable-warnings"

[tool.ruff]
target-version = "py310"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

extend-include = ["*.ipynb"]

line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # import sorting
    "N",   # pep8 naming
    "ISC", # flake8 implicit string concat
    "PTH", # flake8-use-pathlib use Path library
    "PD",  # pandas-vet
]

ignore = [
    "D417", # documentation for every function parameter.
    "N806", # ignore uppercased variables
    "N812", # import as uppercased
    "N803", # lowercased args
    "N817", # imported as acryonym
    "B023", # doesn't bind loop var, we do this a lot in torch
    "D100", # module-level docstrings
    "N805", # first param needs to be self; pydantic breaks this sometimes
]

# Only format Jupyter notebooks, but don't lint them
exclude = ["*.ipynb"]

# Avoid trying to fix some violations
unfixable = ["B", "SIM", "TRY", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["api", "app", "core", "tests"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E402", # import violations
    "F401", # import unused
    "F403", # import undefined
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
