[project]
name = "backend"
version = "0.1.4-alpha"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "loguru==0.7.2",
    "pydantic>=2.10.0",
    "pydantic-settings==2.2.1",
    "requests>=2,<3",
    "sqlalchemy[asyncio]==2.0.28",
    "uvicorn[standard]==0.28.0",
    "s3fs>=2024.12.0",
    "datasets==3.4.1",
    "ray[client]==2.30.0",
    "psycopg2-binary==2.9.9",
    # For sqlalchemy
    "python-dotenv>=1.0.1",
    "alembic>=1.13.3",
    "lumigator-schemas",
    "mlflow>=2.20.3",
    "cryptography>=43.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.3",
    "requests-mock>=1.12.1",
    "debugpy>=1.8.11"
]

[tool.uv.sources]
lumigator-schemas = { path = "../schemas", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
