[project]
name = "lumigator-sdk"
version = "0.1.2-alpha"
description = "Lumigator SDK using the REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru==0.7.2",
    "requests>=2,<3",
    "lumigator-schemas==0.1.2-alpha"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
    "debugpy>=1.8.12",
]

[tool.uv.sources]
lumigator-schemas = { path = "../schemas", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"
