[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "boto3==1.34.105",
    "boto3-stubs[essential,s3]==1.34.105",
    "loguru==0.7.2",
    "mistralai==0.4.2",
    "mypy-boto3==1.34.105",
    "openai==1.38.0",
    "pydantic>=2.8.0",
    "pydantic-settings==2.2.1",
    "requests>=2,<3",
    "sqlalchemy[asyncio]==2.0.28",
    "uvicorn[standard]==0.28.0",
    "s3fs==2024.5.0",
    "datasets==2.20.0",
    "ray[client]==2.30.0",
    "psycopg2-binary==2.9.9",
    # For sqlalchemy
    "python-dotenv>=1.0.1",
    "lumigator-schemas",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "testcontainers>=4.8.2",
]

[tool.uv.sources]
lumigator-schemas = { path = "../schemas", editable = true }
