[project]
name = "lumigator-schemas"
dynamic = ["version"]
description = "Schemas used for REST API communication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.envs.default]
installer = "uv"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
