[project]
name = "lumigator-sdk"
version = "0.1.0-rc.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru==0.7.2",
    "requests>=2,<3",
    "pydantic>=2.8.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.uv.sources]
lumigator-schemas = { path = "../schemas", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.build.targets.sdist.force-include]
"../schemas/lumigator_schemas" = "lumigator_schemas"

[tool.hatch.build.targets.sdist]
packages = ["lumigator_sdk"]

[tool.hatch.build.targets.wheel]
packages = ["lumigator_sdk", "lumigator_schemas"]
