[project]
name = "lumigator_sdk"
version = "0.1.0"
description = "SDK over the Lumigtor endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru==0.7.2",
    "requests>=2,<3",
    "schemas",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.uv.sources]
schemas = { path = "../schemas", editable = true }
