[project]
name = "lumigator-sdk"
dynamic = ["version"]
description = "Lumigator SDK using the REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru==0.7.2",
    "requests>=2,<3",
    "lumigator-schemas==0.1.0-rc.2"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.uv.sources]
lumigator-schemas = { path = "../schemas", editable = true }

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
